--- a/index.html
+++ b/index.html
@@ -1,17 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Home page</title>
-    <link rel="stylesheet" type="text/css" href="/bulma.css" />
+    <title>Protim Roy</title>
+    <link rel="stylesheet" lang="text/css" href="/bulma.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>a[href^="https://"]::after {
+        content: " [*]";
+      }
+      .navbar-menu {
+        box-shadow: none;
+      }</style>
   </head>
   <body>
-    <div class="section">
-      <h1 class="title">Home page</h1>
-      <div class="content">
-        <p>
-Hello, world!</p>
+    <section class="section">
+      <div class="container">
+        <nav class="navbar mb-4" role="navigation">
+          <div class="navbar-menu is-active">
+            <div class="navbar-start">
+              <a href="/" class="navbar-item">Back home</a>
+            </div>
+            <div class="navbar-end">
+
+            </div>
+          </div>
+        </nav>
       </div>
-    </div>
-    
+      <div class="container" id="content">
+        <h1 class="title">
+          <span class="icon-text"><svg
+  xmlns="http://www.w3.org/2000/svg"
+  width="24"
+  height="24"
+  viewBox="0 0 24 24"
+  fill="none"
+  stroke="currentColor"
+  stroke-width="2"
+  stroke-linecap="round"
+  stroke-linejoin="round"
+>
+  <path d="M12 20.94c1.5 0 2.75 1.06 4 1.06 3 0 6-8 6-12.22A4.91 4.91 0 0 0 17 5c-2.22 0-4 1.44-5 2-1-.56-2.78-2-5-2a4.9 4.9 0 0 0-5 4.78C2 14 5 22 8 22c1.25 0 2.5-1.06 4-1.06Z" />
+  <path d="M10 2c1 .5 2 2 2 5" />
+</svg>
+
+            <span>Protim Roy</span></span>
+        </h1>
+        <div class="field is-grouped is-grouped-multiline">
+<div class="control">
+<div class="tags has-addons">
+<span class="tag is-white">slug</span>
+<span class="tag is-light">/</span>
+</div>
+</div>
+
+<div class="control">
+<div class="tags has-addons">
+<span class="tag is-white">title</span>
+<span class="tag is-light">Protim Roy</span>
+</div>
+</div>
+</div>
+        
+        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy. I am a computer scientist / software developer with a MSc. My projects are documented in my blogs.</p>
+        <section class="content" style="font-size:75%;" >
+          <table>
+  <tr>
+    <th>Publications</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href=https://atrium.lib.uoguelph.ca/items/7aba3ef1-a606-4717-84ef-67b39d1229fc>Mini-Batch Alopex-bia For Training In Neural Networks</a></td>
+  </tr>
+  <tr>
+    <th>Blogs</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/pro-log>Placeholder</a> <br> a blog for all things engineerings</td>
+  </tr>
+  <tr>
+    <th>Contact</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href="mailto:mail@protimroy.com">Email</a><br><a href=https://www.linkedin.com/in/protimr>Linkedin</a><br><a href=https://www.github.com/protimroy>Github</a></td>
+  </tr>
+</table>
+<p>
+<a href=https://protimroy.com>Protim Roy</a> &copy; 2024<br>
+Made with <a href=https://github.com/sea-grass/goku>Goku</a> &copy; 2024</p>
+        </section>
+      </div>
+    </section>
   </body>
 </html>
