deploy: 27b0e83db654387dfcad12d9cf0e74e7b60d7424

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 </div>
         
-        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy. I am a computer scientist / software developer with a MSc. My projects are documented in my blogs.</p>
+        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy.</p>
         <section class="content" style="font-size:75%;" >
           <table>
   <tr>
