--- a/index.html
+++ b/index.html
@@ -60,9 +60,32 @@
 </div>
 </div>
         
-        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy.</p>
+        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy. I am a computer scientist / software developer with a MSc. My projects are documented in my blogs.</p>
         <section class="content" style="font-size:75%;" >
-          <p>
+          <table>
+  <tr>
+    <th>Publications</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href=https://atrium.lib.uoguelph.ca/items/7aba3ef1-a606-4717-84ef-67b39d1229fc>Mini-Batch Alopex-bia For Training In Neural Networks</a></td>
+  </tr>
+  <tr>
+    <th>Blogs</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/pro-log>Placeholder</a> <br> a blog for all things engineerings</td>
+  </tr>
+  <tr>
+    <th>Contact</th>
+    <!-- <th>November 2024</th> -->
+  </tr>
+  <tr>
+    <td> <a href="mailto:mail@protimroy.com">Email</a><br><a href=https://www.linkedin.com/in/protimr>Linkedin</a><br><a href=https://www.github.com/protimroy>Github</a></td>
+  </tr>
+</table>
+<p>
 <a href=https://protimroy.com>Protim Roy</a> &copy; 2024<br>
 Made with <a href=https://github.com/sea-grass/goku>Goku</a> &copy; 2024</p>
         </section>
