deploy: c70c7f71187a3ef4bfcf52893e65adafddcfee30

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </div>
 </div>
         
-        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy. I am a computer scientist / software developer with a MSc. My projects are documented in my blogs.</p>
+        <p class="subtitle" style="font-size:95%;" >Welcome to the home page of Protim Roy. I am a computer scientist / software developer with a MSc. My projects and content are documented in my blogs.</p>
         <section class="content" style="font-size:75%;" >
           <table>
   <tr>
@@ -75,7 +75,7 @@
     <!-- <th>November 2024</th> -->
   </tr>
   <tr>
-    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/pro-log>Placeholder</a> <br> a blog for all things engineerings</td>
+    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/pro-log>Placeholder</a> <br> a blog for design, engineering, and programming related content.</td>
   </tr>
   <tr>
     <th>Contact</th>
