deploy: 9e43054dcafb331a7603d07a98dd27e7d21b3a7d

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!-- <th>November 2024</th> -->
   </tr>
   <tr>
-    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/pro-log>Placeholder</a> <br> a blog for design, engineering, and programming related content.</td>
+    <td> <a href=https://www.protimroy.com/pro-log>Pro-log</a> <br> A blog solely for artificial intelligence(ai), machine learning(ml), deep learning(dl), and generative ai.<br><br> <a href=https://www.protimroy.com/engineering-log>Engineering-log</a> <br> a blog for engineering, design, and programming/software dev related content.</td>
   </tr>
   <tr>
     <th>Contact</th>
