deploy: 6168669c73b8f5c30bc52475da77e92916c11906

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- <th>November 2024</th> -->
   </tr>
   <tr>
-    <td> <a href=https://atrium.lib.uoguelph.ca/items/7aba3ef1-a606-4717-84ef-67b39d1229fc>Mini-Batch Alopex-bia For Training In Neural Networks</a></td>
+    <td> <a href=https://atrium.lib.uoguelph.ca/items/7aba3ef1-a606-4717-84ef-67b39d1229fc>Mini-Batch Alopex-bia For Training Neural Networks</a></td>
   </tr>
   <tr>
     <th>Blogs</th>
